@@ -276,6 +276,23 @@ class ETreeXSLTTestCase(HelperTestCase):
 ''',
                           st.tostring(res))
 
+    def test_xslt_parameter_invalid(self):
+        tree = self.parse('<a><b>B</b><c>C</c></a>')
+        style = self.parse('''\
+<xsl:stylesheet version="1.0"
+    xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+  <xsl:param name="bar"/>
+  <xsl:template match="/">
+    <foo><xsl:value-of select="$bar" /></foo>
+  </xsl:template>
+</xsl:stylesheet>''')
+
+        st = etree.XSLT(style)
+        res = self.assertRaises(etree.XSLTApplyError,
+                                st, tree, bar="<test/>")
+        res = self.assertRaises(etree.XSLTApplyError,
+                                st, tree, bar="....")
+
     if etree.LIBXSLT_VERSION < (1,1,18):
         # later versions produce no error
         def test_xslt_parameter_missing(self):
@@ -482,9 +499,8 @@ class ETreeXSLTTestCase(HelperTestCase):
         source = self.parse(xml)
         styledoc = self.parse(xslt)
         style = etree.XSLT(styledoc)
-        result = style.apply(source)
-        self.assertEqual('', style.tostring(result))
-        self.assertEqual('', str(result))
+
+        self.assertRaises(etree.XSLTApplyError, style, source)
         self.assert_("TEST TEST TEST" in [entry.message
                                           for entry in style.error_log])
 
