@@ -13,6 +13,9 @@ Bugs fixed
 
 * Resolving to a filename in custom resolvers didn't work.
 
+* lxml did not honour libxslt's second error state "STOPPED", which
+  let some XSLT errors pass silently.
+
 * Memory leak in Schematron with libxml2 >= 2.6.31.
 
 Other changes
